<resources>
    <string name="app_name">CACAController</string>
    <string name="trazas">- Trazas -</string>
    <string name="estat">Estado</string>
    <string name="conectado">Conectado</string>
    <string name="desconectado">Desconectado</string>
    <string name="jpad">JPAD</string>
    <string name="cuadrosMando">Cuadros de mando</string>
    <string name="jpad_joystick">Joypad/Joystick</string>
    <string name="direccion">DIRECCIÓN</string>
    <string name="h3">H3</string>
    <string name="logJPADConectado">JPAD Conectado!</string>
    <string name="logJPADDesconectado">JPAD Desconectado!</string>
    <string name="logH3Conectado">H3 Conectado!</string>
    <string name="logH3Desconectado">H3 Desconectado!</string>
    <string name="mensajeInicio">Mensaje de inicio</string>

</resources>