<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nivell0"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/llTitol"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/nivell1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/app_name"
                android:textColor="@color/nivell0"
                android:textSize="@dimen/labelFormLarge"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitEnd"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iLogs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/LabelFormVertical"
            android:background="@color/white"
            android:gravity="start"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trazas"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:paddingLeft="@dimen/listItemLeftShort"
                android:textStyle="normal" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/iTitolEstat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nivell3"
            android:gravity="start"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estat"
                android:textColor="@color/white"
                android:textSize="@dimen/labelFormMedium"
                android:paddingLeft="@dimen/listItemLeftShort"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/iEstat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSenyal1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:paddingLeft="@dimen/listItemLeftShort"
                app:srcCompat="@mipmap/ic_bluetooth_ok_round" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpad"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:textStyle="normal"
                android:paddingLeft="@dimen/paddingLinia"
                android:paddingRight="@dimen/paddingLinia"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conectado"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/iEstat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSenyal2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:paddingLeft="@dimen/listItemLeftShort"
                app:srcCompat="@mipmap/ic_bluetooth_ko_round" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpad"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:textStyle="normal"
                android:paddingLeft="@dimen/paddingLinia"
                android:paddingRight="@dimen/paddingLinia"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desconectado"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/iQuadresComandament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nivell3"
            android:gravity="start"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuadrosMando"
                android:textColor="@color/white"
                android:textSize="@dimen/labelFormMedium"
                android:paddingLeft="@dimen/listItemLeftShort"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCuadroMando1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivCuadroMando1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitStart"
                android:paddingLeft="@dimen/listItemLeftShort"
                app:srcCompat="@mipmap/ic_dualshock_ps4_round" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpad_joystick"
                android:textColor="@color/black"
                android:textSize="@dimen/labelFormShort"
                android:textStyle="normal"
                android:paddingLeft="@dimen/paddingLinia"
                android:paddingRight="@dimen/paddingLinia"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iLLPeuCalendari"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/nivell4"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/iXarxesSocials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nivell3"
                android:gravity="bottom"
                android:orientation="horizontal">

                <include layout="@layout/inc_xarxes_socials" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>